@@ -32,6 +32,8 @@ USER-VISIBLE CHANGES:
 * Incomplete bases no longer support the AI. (FM)
 - It's possible to get lucky when hacking some random computer.  (FM)
 * Seconds, minutes, and hours now matter much more than they used to. (FM)
+- You can use the Enter on the numeric keypad like the regular Enter key.
+  (Phil, gare for suggestion)
 
 OTHER CHANGES:
 - Massive (~50%) code changes, to improve clarity and reduce duplication. (FM)
